2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* man/ziggurat.Rd: Refinement of doi use in Rd file
 	* man/RcppZiggurat-package.Rd: Idem

2021-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* man/ziggurat.Rd: Change JSS url to use doi per JSS requent
 	* man/RcppZiggurat-package.Rd: Idem

2021-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

2021-06-23  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Update to GSL 2.7 and support UCRT build
	* src/Makevars.win: Update to GSL 2.7
	* src/Makevars.ucrt: Support UCRT build

2021-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added links

2021-01-14  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.6

	* vignettes/RcppZiggurat.Rmd (Rcpp): Remove old tweak on final
	pagebreak no longer needed with updated pinp package

2020-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update one URLs to new updated value
	* man/RcppZiggurat-package.Rd: Idem
	* man/ziggurat.Rd: Idem

	* .travis.yml (dist): Switch to focal, tweak PKG_TGZ setting

	* cleanup: Change shebang to #!/bin/sh

2020-06-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit' badge

	* .travis.yml (dist): Switch to bionic

2019-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2018-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/Ziggurat.h (Ziggurat): Added parameter getter and